# angstrom-sdk-rs

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yaml  ci.yaml
contracts/: .gitignore  foundry.toml
contracts/abis/AngstromL2.sol/: AngstromL2.json
contracts/abis/AngstromL2Factory.sol/: AngstromL2Factory.json
contracts/src/: UserPositionFetcher.sol
crates/l1-sdk/: Cargo.toml
crates/l1-sdk/src/apis/: node_api.rs
crates/l1-sdk/src/builders/: mod.rs  position_manager_liquidity.rs
crates/l1-sdk/src/providers/: local_reth.rs  mod.rs
crates/l1-sdk/src/test_utils/: filler_orders.rs  valid_test_params.rs
crates/l1-sdk/src/types/: historical_order_filters.rs
crates/l1-sdk/src/types/fees/: angstrom.rs  uniswap.rs
crates/l1-sdk/src/types/fillers/: balance_check.rs  signer.rs
crates/l1-sdk/src/utils/pool_tick_loaders/: local_reth.rs  mod.rs
crates/l2-sdk/: Cargo.toml
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  storage.rs
crates/types/src/providers/: local_reth.rs  mod.rs
examples/: Cargo.toml  modify_liquidity.rs  order_gen.rs  send_order.rs
examples/advanced/internal-balances/: Cargo.toml
examples/advanced/internal-balances/src/: main.rs
examples/advanced/post-bundle-unlock-simulation/: Cargo.toml
examples/advanced/post-bundle-unlock-simulation/src/: main.rs
examples/advanced/top-of-block-auction/: Cargo.toml
examples/advanced/top-of-block-auction/src/: main.rs
examples/data/liquidity-positions/: Cargo.toml
examples/data/liquidity-positions/src/: main.rs
examples/data/lp-fees/: Cargo.toml
examples/data/lp-fees/src/: main.rs
examples/data/orders/: Cargo.toml
examples/data/orders/src/: main.rs
examples/data/pool-info/: Cargo.toml
examples/data/pool-info/src/: main.rs
examples/data/pool-keys/: Cargo.toml
examples/data/pool-keys/src/: main.rs
examples/data/ucp/: Cargo.toml
examples/data/ucp/src/: main.rs
examples/liquidity/collecting-fees/: Cargo.toml
examples/liquidity/modifying-liquidity/: Cargo.toml
examples/liquidity/modifying-liquidity/src/: add_liquidity_pool_manager.rs  add_liquidity_position_manager.rs  decrease_liquidity_pool_manager.rs  main.rs  remove_liquidity_position_manager.rs
examples/src/: lib.rs  modify_liquidity.rs  send_order.rs
examples/src/docs/liquidity/: mod.rs  modifying_liquidity.rs
examples/src/utils/: order_gen.rs
examples/swap/post-bundle-unlock/: Cargo.toml
examples/swap/top-of-block-order/: Cargo.toml
examples/swap/user-order/: Cargo.toml
examples/utils/: mod.rs  order_gen.rs
sdk/: Cargo.toml  build.rs
sdk-macros/: Cargo.toml
sdk-macros/src/: lib.rs  neon.rs  neon_obj.rs
sdk-macros/src/neon/: mod.rs  object.rs
sdk/src/: lib.rs
sdk/src/apis/: data_api.rs  mod.rs  node_api.rs  order_builder.rs  user_api.rs  user_api2.rs  utils.rs
sdk/src/builders/: position_manager_liquidity.rs
sdk/src/l1/: constants.rs  mod.rs  storage.rs
sdk/src/l1/apis/: data_api.rs  mod.rs  node_api.rs  order_builder.rs  user_api.rs  utils.rs
sdk/src/l1/apis/impls/: alloy_provider.rs  local_reth.rs  mod.rs
sdk/src/l1/providers/: api.rs  backend.rs  local_reth.rs  mod.rs
sdk/src/l1/test_utils/: filler_orders.rs  mod.rs  valid_test_params.rs
sdk/src/l1/types/: errors.rs  historical_order_filters.rs  mod.rs
sdk/src/l1/types/fees/: angstrom.rs  uniswap.rs
sdk/src/l1/types/fillers/: balance_check.rs  mod.rs  nonce_generator.rs  signer.rs
sdk/src/l1/utils/pool_tick_loaders/: local_reth.rs  mod.rs  root_provider.rs
sdk/src/l2/: constants.rs  mod.rs
sdk/src/l2/apis/: data_api.rs  mod.rs  user_api.rs
sdk/src/l2/apis/impls/: alloy_provider.rs  local_reth.rs  mod.rs
sdk/src/l2/test_utils/: mod.rs  valid_test_params.rs
sdk/src/providers/: api.rs  backend.rs  local_reth.rs  mod.rs
sdk/src/test_utils/: filler_orders.rs  mod.rs  valid_test_params.rs
sdk/src/types/: bundle_utils.rs  common.rs  errors.rs  historical_order_filters.rs  mod.rs  positions.rs  storage.rs  utils.rs
sdk/src/types/contract_bindings/: mod.rs
sdk/src/types/contracts/: angstrom_l2.rs  common.rs  l2_utils.rs  mod.rs  utils.rs
sdk/src/types/contracts/angstrom/: mod.rs
sdk/src/types/contracts/pool_manager/: pool_state.rs  pool_tick_state.rs  position_state.rs  tick_bitmap.rs
sdk/src/types/contracts/position_manager/: mod.rs
sdk/src/types/fees/: angstrom.rs  mod.rs  uniswap.rs
sdk/src/types/fillers/: balance_check.rs  errors.rs  mod.rs  nonce_generator.rs  signer.rs
sdk/src/types/pool_tick_loaders/: alloy_provider.rs  local_reth.rs  mod.rs
sdk/src/types/positions/: mod.rs  utils.rs
sdk/src/types/positions/contracts/: angstrom.rs  common.rs  mod.rs  pool_manager.rs  position_manager.rs
sdk/src/types/positions/fees/: angstrom.rs  mod.rs  uniswap.rs
sdk/src/types/providers/: alloy_provider.rs  local_reth.rs  mod.rs  primitive_fetcher.rs  storage.rs
sdk/src/utils/: mod.rs  provider_blanket.rs
sdk/src/utils/pool_tick_loaders/: local_reth.rs  mod.rs  root_provider.rs
src/: lib.rs  test_utils.rs
src/apis/: data_api.rs  info_api.rs  mod.rs  node_api.rs  order_api.rs  order_builder.rs  user_api.rs  utils.rs
src/js_utils/: mod.rs  types.rs
src/js_utils/types/: data_api.rs  fillers.rs  mod.rs  node_api.rs  order_builder.rs  other.rs
src/order_builder/: valid.rs
src/providers/: angstrom.rs  api.rs  backend.rs  builder.rs  eth.rs  eth_provider.rs  eth_rpc.rs  filler.rs  local_reth.rs  mod.rs
src/test_utils/: filler_orders.rs  mod.rs  valid_orders.rs
src/types/: common.rs  config.rs  errors.rs  historical_order_filters.rs  mod.rs
src/types/fillers/: balance_check.rs  chain_id.rs  mod.rs  nonce_generator.rs  signer.rs
