[workspace]
members = ["sdk"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "BUSL-1.1"
exclude = [".github/"]

[workspace.dependencies]

angstrom-sdk-rs = { path = "./sdk" }

alloy-consensus = { version = "1.0.41", default-features = false }
alloy-contract = { version = "1.0.41", default-features = false }
alloy-eips = { version = "1.0.41", default-features = false }
alloy-json-rpc = { version = "1.0.41", default-features = false }
alloy-network = { version = "1.0.41", default-features = false }
alloy-node-bindings = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = ["map-foldhash"] }
alloy-provider = { version = "1.0.41", default-features = false, features = ["reqwest", "anvil-api"] }
alloy-rpc-types = { version = "1.0.41", default-features = false, features = ["eth"] }
alloy-signer = { version = "1.0.41", default-features = false }
alloy-signer-local = { version = "1.0.41", default-features = false }
alloy-sol-types = "1.4.1"
alloy-transport = { version = "1.0.41", default-features = false }
angstrom-rpc-api = { git = "https://github.com/SorellaLabs/angstrom.git" }
angstrom-rpc-types = { git = "https://github.com/SorellaLabs/angstrom.git" }
angstrom-types-primitives = { git = "https://github.com/SorellaLabs/angstrom.git" }
async-trait = "0"
auto_impl = "1.3"
dotenv = "0.15"
eyre = "0.6.12"
futures = "0.3.26"
itertools = "0.14"
jsonrpsee-core = "0.26.0"
jsonrpsee-http-client = "0.26.0"
jsonrpsee-ws-client = "0.26.0"
lib-reth = { git = "https://github.com/jnoorchashm37/lib-reth", features = ["rayon"] }
malachite = "0.4"
malachite-q = "0.4"
pade = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0" }
rand = "0.9"
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3", default-features = false, features = [
  "mdbx",
] }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.9.3", tag = "v1.9.3" }
revm = { version = "33.1.0", features = [
  "std",
  "secp256k1",
  "optional_balance_check",
  "optional_block_gas_limit",
  "c-kzg",
], default-features = false }
revm-database = { version = "9.0.5", default-features = false }
rust-utils = { git = "https://github.com/jnoorchashm37/rust-utils.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
testing-tools = { git = "https://github.com/SorellaLabs/angstrom.git", default-features = false }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uni-v4 = { git = "https://github.com/SorellaLabs/angstrom-v4.git" }
uniswap-storage = { git = "https://github.com/jnoorchashm37/uniswap-storage" }
