[workspace]
members = ["sdk"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "BUSL-1.1"
exclude = [".github/"]

[workspace.dependencies]

angstrom-sdk = { path = "./sdk" }

alloy-consensus = { version = "1.6.3", default-features = false }
alloy-contract = { version = "1.6.3", default-features = false }
alloy-eips = { version = "1.6.3", default-features = false }
alloy-json-rpc = { version = "1.6.3", default-features = false }
alloy-network = { version = "1.6.3", default-features = false }
alloy-node-bindings = { version = "1.6.3", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = ["map-foldhash"] }
alloy-provider = { version = "1.6.3", default-features = false, features = ["reqwest", "anvil-api"] }
alloy-rpc-types = { version = "1.6.3", default-features = false, features = ["eth"] }
alloy-signer = { version = "1.6.3", default-features = false }
alloy-signer-local = { version = "1.6.3", default-features = false }
alloy-sol-types = "1.5.6"
alloy-transport = { version = "1.6.3", default-features = false }
angstrom-rpc-api = { git = "https://github.com/SorellaLabs/angstrom.git" }
angstrom-rpc-types = { git = "https://github.com/SorellaLabs/angstrom.git" }
angstrom-types-primitives = { git = "https://github.com/SorellaLabs/angstrom.git" }
async-trait = "0"
auto_impl = "1.3"
dotenv = "0.15"
eyre = "0.6.12"
futures = "0.3.26"
itertools = "0.14"
jsonrpsee-core = "0.26.0"
jsonrpsee-http-client = "0.26.0"
jsonrpsee-ws-client = "0.26.0"
lazy_static = "1.5.0"

# 
eth-network-exts = { git = "https://github.com/jnoorchashm37/lib-eth", default-features = false }
lib-reth = { git = "https://github.com/jnoorchashm37/lib-eth", default-features = false, features = [
  "uniswap-storage",
  "ws",
  "ipc",
  "rayon",
] }
malachite = "0.4"
malachite-q = "0.4"
op-alloy-network = "0.23.1"
pade = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0" }
paste = "1"
rand = "0.9"
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3", default-features = false, features = [
  "mdbx",
] }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
revm = { version = "34.0.0", features = [
  "std",
  "secp256k1",
  "optional_balance_check",
  "optional_block_gas_limit",
  "c-kzg",
], default-features = false }
revm-database = { version = "10.0.0", default-features = false }
rust-utils = { git = "https://github.com/jnoorchashm37/rust-utils.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.2"
testing-tools = { git = "https://github.com/SorellaLabs/angstrom.git", default-features = false }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uni-v4 = { git = "https://github.com/SorellaLabs/angstrom-v4.git", default-features = false }
uniswap-storage = { git = "https://github.com/jnoorchashm37/lib-eth" }

[patch.crates-io]
op-alloy-rpc-types-engine = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.3" }
op-alloy-consensus = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.3" }
op-alloy-network = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.3" }
op-alloy-rpc-types = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.3" }
op-alloy = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.3" }
alloy-op-hardforks = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.3" }
