[package]
name = "angstrom-sdk-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lib]
name = "angstrom_sdk_rs"

[dependencies]
alloy.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-node-bindings.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
angstrom-rpc.workspace = true
angstrom-types.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
dotenv.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-http-client.workspace = true
jsonrpsee-ws-client.workspace = true
pade.workspace = true
rand.workspace = true
rust-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
testing-tools.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniswap-v4.workspace = true
validation.workspace = true

lib-reth = { workspace = true, optional = true }
reth-db = { workspace = true, optional = true }
reth-node-ethereum = { workspace = true, optional = true }
reth-node-types = { workspace = true, optional = true }
reth-provider = { workspace = true, optional = true }
revm = { workspace = true, optional = true }
revm-database = { workspace = true, features = ["alloydb"] }

[dev-dependencies]
revm = { workspace = true, features = ["alloydb"], default-features = false }
revm-database.workspace = true

[features]
default = ["ipc", "ws"]
full = ["ipc", "ws", "local-reth"]
local-reth = [
    "dep:lib-reth",
    "dep:revm",
    "dep:reth-db",
    "dep:reth-node-ethereum",
    "dep:reth-node-types",
    "dep:reth-provider",
]

ipc = []
ws = []

example-utils = ["revm/alloydb"]
