[package]
name = "angstrom-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-node-bindings.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
angstrom-rpc-api.workspace = true
angstrom-rpc-types.workspace = true
angstrom-types-primitives.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
dotenv.workspace = true
eth-network-exts.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-http-client.workspace = true
jsonrpsee-ws-client.workspace = true
lazy_static.workspace = true
lib-reth = { workspace = true, optional = true }
op-alloy-network = { workspace = true, optional = true }
pade.workspace = true
paste.workspace = true
rand.workspace = true
reth-provider = { workspace = true, optional = true }
revm = { workspace = true, optional = true }
revm-database = { workspace = true, features = ["alloydb"] }
rust-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
testing-tools = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
uni-v4.workspace = true
uniswap-storage.workspace = true
uniswap-v4 = { git = "https://github.com/SorellaLabs/angstrom.git", optional = true }

[dev-dependencies]
revm = { workspace = true, features = ["alloydb"], default-features = false }
revm-database.workspace = true
serial_test.workspace = true
testing-tools.workspace = true
uniswap-v4 = { git = "https://github.com/SorellaLabs/angstrom.git" }

[build-dependencies]
convert_case = "0"
itertools.workspace = true

[features]
default = ["ipc", "ws", "full", "example-utils"]
full = ["ipc", "ws", "local-reth", "l1", "l2"]
local-reth = ["dep:lib-reth", "dep:revm", "dep:reth-provider", "uniswap-storage/local-reth"]

ipc = []
ws = []

l1 = []
l2 = ["lib-reth/op-reth-libmdbx", "dep:op-alloy-network"]

example-utils = ["revm/alloydb", "dep:testing-tools", "dep:uniswap-v4"]
