[package]
name = "example-post-bundle-unlock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
alloy.workspace = true
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
angstrom-sdk-rs = { workspace = true, features = ["example-utils"] }
angstrom-types.workspace = true
dotenv.workspace = true
eyre.workspace = true
tokio.workspace = true
uniswap_v3_math = { git = "https://github.com/SorellaLabs/v3-math", branch = "main" }
